[package]
name = "pubsub-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.40", features = ["tcp-tokio", "noise", "yamux", "gossipsub", "mdns-tokio", "dns-tokio"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
